Add intagrated services API contracts

--- a/src/MyLab.OidcFinisher/MyLab.OidcFinisher.csproj
+++ b/src/MyLab.OidcFinisher/MyLab.OidcFinisher.csproj
@@ -7,4 +7,9 @@
     <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MyLab.ApiClient" Version="3.20.30" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
+  </ItemGroup>
+
 </Project>
