Add side testing

--- a/src/MyLab.OidcFinisher/appsettings.Development.json
+++ b/src/MyLab.OidcFinisher/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "OidcFinisher": {
+    "ClientId": "foo",
+    "ClientSecret": "bar",
+    "RedirectUri": "baz"
+  },
+  "Api": {
+    "List": {
+      "oidc": { "Url": "http://foo.bar" }
     }
   }
 }
