--- a/src/MyLab.OidcFinisher/MyLab.OidcFinisher.csproj
+++ b/src/MyLab.OidcFinisher/MyLab.OidcFinisher.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.4.0" />
     <PackageReference Include="MyLab.ApiClient" Version="3.20.30" />
+    <PackageReference Include="MyLab.Log" Version="3.6.29" />
     <PackageReference Include="MyLab.Log.Dsl" Version="3.7.5" />
     <PackageReference Include="MyLab.WebErrors" Version="1.1.6" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
